# python-usp-starter-kit

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agent/rules/: database.md  django.md  python_usp.md
apps/base/: views.py
apps/base/static/base/css/: base.css
core/: settings.py  urls.py
scripts/: entrypoint.sh
templates/base/: base.html  index.html
